# blog_rust

./: README.md  docs
backend/services/api-gateway/: .env.example  Cargo.toml
backend/services/api-gateway/src/: error.rs  main.rs  types.rs
backend/services/api-gateway/src/middleware/: auth.rs  mod.rs
backend/services/api-gateway/src/routes/: auth.rs  (+4 more)
backend/services/auth/: .env.example  Cargo.toml
backend/services/auth/src/: error.rs  main.rs  models.rs  services.rs
backend/services/auth/src/handlers/: auth.rs
backend/services/blog/: .env.example  Cargo.toml
backend/services/blog/src/: error.rs  main.rs  models.rs  services.rs
backend/services/comment/: .env.example  Cargo.toml
backend/services/comment/src/: error.rs  main.rs  models.rs  services.rs
backend/services/user/: .env.example  Cargo.toml
backend/services/user/src/: error.rs  main.rs  models.rs  services.rs
docs/blog_sample_docs/: 01_system_architecture.md  02_database_design.md  03_api_design.md  04_frontend_design.md  todo.md
docs/database_design/: supabase_implementation.md
docs/service_communication/: microservices_communication.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: root.tsx
frontend/app/components/common/: Button.tsx  Card.tsx  Input.tsx
frontend/app/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/app/components/post/: PostCard.tsx
frontend/app/lib/supabase/: client.ts  types.ts
frontend/app/routes/: _index.tsx  login.tsx  logout.tsx  posts.$slug.tsx  register.tsx
frontend/app/styles/: tailwind.css
(+10 files in other folders)
